Configured .env files and deployment setup

--- a/server/.env
+++ b/server/.env
@@ -1,11 +1,11 @@
-MONGODB_URL='mongodb+srv://anujrajbhar809:56vvE95bK6nWzzqB@authsys.gfyzq12.mongodb.net/?retryWrites=true&w=majority&appName=AuthSys' 
+MONGODB_URL=mongodb+srv://anujrajbhar809:56vvE95bK6nWzzqB@authsys.gfyzq12.mongodb.net/?retryWrites=true&w=majority&appName=AuthSys 
 
-JWT_SECRET='Hack#code'
+JWT_SECRET=Hack#code
 
-NODE_ENV='development'
+NODE_ENV=development
 
-SMTP_USER= "992412001@smtp-brevo.com"
-SMTP_PASS="kpcZdF0GhgB5yOEt"
+SMTP_USER= 992412001@smtp-brevo.com
+SMTP_PASS=kpcZdF0GhgB5yOEt
 
-SENDER_EMAIL="projectbuddy9@gmail.com"
+SENDER_EMAIL=projectbuddy9@gmail.com
 
