--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 MONGODB_URL=mongodb+srv://anujrajbhar809:56vvE95bK6nWzzqB@authsys.gfyzq12.mongodb.net/?retryWrites=true&w=majority&appName=AuthSys 
 
-JWT_SECRET=Login#code
+JWT_SECRET=Login
 
 NODE_ENV=development
 
