--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
+FRONTEND_URL = "http://localhost:5173"
 MONGODB_URL=mongodb+srv://anujrajbhar809:56vvE95bK6nWzzqB@authsys.gfyzq12.mongodb.net/?retryWrites=true&w=majority&appName=AuthSys 
 
 JWT_SECRET=Login
