--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-FRONTEND_URL =http://localhost:5173
+FRONTEND_URL =https://auth-system-t2kj.onrender.com
 MONGODB_URL=mongodb+srv://anujrajbhar809:56vvE95bK6nWzzqB@authsys.gfyzq12.mongodb.net/?retryWrites=true&w=majority&appName=AuthSys 
 
 JWT_SECRET=Login
